--- a/App.Console/App.config
+++ b/App.Console/App.config
@@ -6,8 +6,13 @@
   <appSettings>
     <add key="RawDataDirectory" value="C:/Sandbox/machine-learning/SpamFilter/RawData" />
     <add key="ProcessedDataDirectory" value="C:/Sandbox/machine-learning/SpamFilter/ProcessedData" />
+    <add key="StopWordsFilePath" value="C:/Sandbox/machine-learning/SpamFilter/stopwords.txt" />
     <add key="LabelFilename" value="SPAMTrain.label" />
     <add key="TransformedFilename" value="Transformed.csv" />
+    <add key="HamTermsFilename" value="HamTerms.csv" />
+    <add key="SpamTermsFilename" value="SpamTerms.csv" />
+    <add key="TermsVectorFilename" value="SubjectTermsVector.csv" />
+    <add key="NumberTermsToGraph" value="15" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
