--- a/App.Console/App.Console.csproj
+++ b/App.Console/App.Console.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{4EB14A51-C1CB-4503-81C9-9346D4ECF153}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>App.Consoler</RootNamespace>
-    <AssemblyName>App.Consoler</AssemblyName>
+    <RootNamespace>App.Console</RootNamespace>
+    <AssemblyName>App.Console</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -55,8 +55,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Preparation.cs" />
+    <Compile Include="SpamFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnityConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -66,6 +67,10 @@
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{D7E1879B-F491-4884-A199-B3B79095B3EB}</Project>
       <Name>Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Data.Analysis\Data.Analysis.csproj">
+      <Project>{4F54F928-2D4E-426B-8F74-5C10112387E8}</Project>
+      <Name>Data.Analysis</Name>
     </ProjectReference>
     <ProjectReference Include="..\Data.Preparation\Data.Preparation.csproj">
       <Project>{C2737758-6F37-46ED-B543-7439A1C524AA}</Project>
