--- a/App.Console/App.config
+++ b/App.Console/App.config
@@ -13,6 +13,8 @@
     <add key="SpamTermsFilename" value="SpamTerms.csv" />
     <add key="TermsVectorFilename" value="SubjectTermsVector.csv" />
     <add key="NumberTermsToGraph" value="15" />
+    <add key="MinimumTermOccurrences" value="25" />
+    <add key="ModelNumFolds" value="3" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
